<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Health Meet</string>
    <string name="main_activity_title">First Time Log in</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_edit_profile">Edit Profile</string>
   <string name="action_add_doctor">Edit primary Doctor</string>
   <string name="action_add_center">Edit primary Center</string>
    <string name="action_change_profile_pic">Edit Profile Image</string>
    <string name="action_change_group_pic">Edit Group Image</string>
    <string name="action_invite_group">Invite Members</string>
    <string name="action_leave_group">Exit Center</string>
    <string name="action_join_group">Join Group</string>
    <string name="action_edit_plan">Edit Appointment</string>
    <string name="action_delete_plan">Delete Appointment</string>
    <string name="welcome_statement">Create and manage your plans here!</string>
    <string name="new_user_button_text">New User Sign Up</string>
    <string name="manage_groups_button_text">Manage Groups</string>
    <string name="manage_plans_button_text">Manage Plans</string>
    <string name="old_user_button_text">Log In</string>
    <string name="register_button_text">Register</string>
    <string name="register_button_text_new">Proceed to Register</string>
    <string name="admin_button_text">Proceed To View Group</string>
    <string name="login_button_text">Log In</string>
    <string name="user_email_id_label">Email Id (eg. healthmeet@gmail.com)</string>
    <string name="user_details_label">User Information:</string>
    <string name="user_name_label">Name (eg. Admin Name)</string>
    <string name="centre_name_label">Centre Name (eg. Name of a hospital)</string>
    <string name="user_address_label">Address </string>
    <string name="user_phone_label">10-digit Mobile Number</string>
    <string name="password_label">Password</string>
    <string name="retype_password_label">Re-type Password</string>
    <string name="create_group_button_text">Create a Group</string>
    <string name="join_group_button_text">Join this Center</string>
    <string name="invite_button_text">Invite selected friends</string>
    <string name="join_groups_button_text">Join a Center</string>
    <string name="emergency_doctor_button">Doctor</string>
    <string name="emergency_healthCentre_button">Health Centre</string>
    <string name="emergency_police_button">Police</string>
    <string name="emergency_ambu_button">Ambulance</string>
    <string name="view_groups_button_text">View my Groups</string>
    <string name="create_button_text"> + </string>
    <string name="create_plans_button_text">Create Appointment</string>
    <string name="view_plans_button_text">View my Plans</string>
    <string name="new_group_name_label">Enter a Group with unique name</string>
    <string name="register_group_button_text">Create this Group</string>
    <string name="group_search_hint">Enter a Group name</string>
    <string name="doctor_search_hint">Enter a Doctor name</string>
    <string name="user_search_hint">Enter Contact name</string>
    <string name="doc_search_hint">Search by Doctor\'s name</string>
    <string name="center_search_hint">Search by Center\'s name</string>
    <string name="email_search_hint">Enter a Name or Email Id</string>
    <string name="group_search_results_label">Search Results:</string>
    <string name="new_plan_title_label">Type a Plan title</string>
    <string name="new_prescription_title_label">Type a Prescription title</string>
    <string name="appointment_title_label">Appointment title</string>
    <string name="new_plan_time_label">Date &amp; Time:</string>
    <string name="prescription_days">  Number Of Days</string>
    <string name="days">Number Of Days</string>
    <string name="new_plan_location_label">Type Location address</string>
    <string name="new_prescription_description">Type medicine name</string>
    <string name="address">Address</string>
    <string name="date_button_text">Start Date</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="doctor_number">Doctors Number</string>
    <string name="health_number">Health Centre No:</string>
     <string name="time_button_text">Start Time</string>
     <string name="end_time_button_text">End Time</string>
     <string name="end_date_button_text">End Date</string>
    <string name="register_plan_button_text">Register Plan</string>
    <string name="add_prescription_button_text">Save to Calendar</string>
    <string name="register_appointment_button_text">Register Appointment</string>
    <string name="edit_plan_button_text">Edit Plan</string>
    <string name="delete_plan_button_text">Delete Plan</string>
    <string name="see_plan_members_button_text">Members Attending &gt;&gt;</string>
    <string name="next_step_button_text">Go to Next Step &gt;&gt;</string>
    <string name="cancel_plan_button_text">X</string>
    <string name="new_plan_date_hint">yyyy-mm-dd</string>
    <string name="DOB_button">...</string>
    <string name="new_plan_time_hint">HH:MM AM/PM</string>
    <string name="select_group_hint">Select a Group</string>
    <string name="view_this_plan_button_text">View Plan details</string>
    <string name="view_group_members_button_text">Group Members &gt;&gt;</string>
    <string name="create_plan_button_text">Create a Plan &gt;&gt;</string>
    <string name="settle_button_text">Settle Bills &gt;&gt;</string>
    <string name="accept_user_button_text">Accept</string>
    <string name="reject_user_button_text">Reject</string>
    <string name="member_list_group_text">Members</string>
    <string name="plan_member_list_label_text">Members Attending:</string>
    <string name="existing_member_list_label_text">Existing Members:</string>
    <string name="invite_list_label_text">Search and Invite friends:</string>
    <string name="plans_list_label_text">Upcoming Appointments:</string>
    <string name="retry_text">No network found. Please tap below image to retry.</string>
    <string name="history_label_text">Plan History:</string>
    <string name="welcome_New_User_SignUp_Value">Welcome, You can start here!</string>
    <string name="welcome_New_User_reg_Value">Select an appropriate category </string>
    <string name="welcome_Code">We have sent you a secret code, type it here and click Register</string>
    <string name="expense_welcome">Expense Report</string>
    <string name="add_expense_text">Add/Edit the amount spent!</string>
    <string name="view_expense_text">Amount spent:</string>
    <string name="expense_title">Add a Title&#8230;</string>
    <string name="expense_value">0</string>
    <string name="expense_currency">$</string>
    <string name="expense_button_text">Submit Expense</string>
    <string name="add_expense_1_text">(1)</string>
    <string name="add_expense_2_text">(2)</string>
    <string name="add_expense_3_text">(3)</string>
    <string name="add_expense_4_text">(4)</string>
    <string name="add_expense_5_text">(5)</string>
    <string name="welcome_Old_LogIn_Value">Welcome back!</string>
    <string name="action_change_password">Change Password</string>
    <string name="action_deactivate_account">Deactivate Account</string>
    <string name="action_about_us">About Us</string>
    <string name="action_view_users">View Users</string>
    <string name="action_view_groups_invited">Groups Invited</string>
    <string name="action_view_members_invited">Members Invited</string>
    <string name="action_about_us_title">About this application:\n\n</string>
     <string name="action_about_us_feature_title">Features:\n</string>
     <string name="title_0">Health Meet. Stay healthy. Stay connected.</string>
     <string name="title_1">About the Application</string>
     <string name="title_2">A complete health care solution. \n </string>
          <string name="title_3"> &#8226; Connecting you to experts  \n&#8226; Your  health tracker \n&#8226; An emergency lifeline  \n&#8226; Valuable information </string>
     
     <string name="title_7">Prakash Iyer</string>
     <string name="title_8">Gaurav Saheja</string>
    <string name="action_about_us_text">We are happy to present you with Health Meet. Connecting people,  doctors and health centres. Medical services are now just a few clicks away.\n\n</string>
    <string name="action_about_us_features">&#8226; Individual or health center registration\n&#8226; Organize appointments\n&#8226; Quick access to emergency contacts\n&#8226; Real time appointment notifications\n&#8226; Save medications to calendar\n&#8226; Health centers can broadcast events\n\nYou can write to us at healthmeetfeedback@gmail.com. We will be happy to hear from you.</string>
    <string name="action_about_us_sign">Keep exploring! You can write to us at healthmeetfeedback@gmail.com. We would be happy to hear from you.</string>
    <string name="old_password_label">Type existing password</string>
    <string name="new_password_label">Type new password</string>
    <string name="retype_new_password_label">Re-type new password</string>
    <string name="change_password_button">Submit New Password</string>
    <string name="leave_group_button">Leave this Center</string>
    <string name="change_password_check_label">Change Password</string>
    <string name="enter_doc_check">I am a Doctor</string>
    <string name="morning_text">Morning</string>
    <string name="afternoon_text">Afternoon</string>
    <string name="evening_text">Evening</string>
    <string name="night_text">Night</string>
    <string name="delete_profile_check_label">Your account will be deleted and all the existing records too</string>
    <string name="delete_profile_button">Delete Account</string>
    <string name="upload_profile_pic_description">Upload Profile pic</string>
    <string name="upload_group_pic_description">Group Profile pic</string>
    <string name="upload_image_button">Upload Selected Photo</string>
    <string name="skip_image_button">Proceed Ahead >></string>
    <string name="select_image_button">Choose a Photo&#8230;</string>
    <string name="view_plan_title_label">  Title </string>
    <string name="view_plan_group_label">  With</string>
    <string name="view_plan_date_label">  From </string>
    <string name="view_plan_date_label_till"> To </string>
    <string name="view_plan_location_label">  With</string>
    <string name="home_plan_label"> Appointments</string>
    <string name="emergency_label"> Emergency</string>
    <string name="prescription_label"> Precription</string>
    <string name="groups_list_label"> Group List</string>
    <string name="group_member"> Member</string>
    <string name="settle_bill"> Settle</string>
    <string name="group_upcomming_plan"> Upcoming</string>
    <string name="invidual"> Individual User (Patient/Doctor)</string>
    <string name="health_centre"> Health Centre</string>
    <string name="gender"> Gender : </string>
    <string name="blood"> Blood Group : </string>
    <string name="health_name"> Health Centre Name : </string>
    <string name="admin_name"> Admin Name : </string>
    <string name="phone"> Phone Number : </string>

</resources>