<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <TextView
        android:id="@+id/aboutUsTitle"
        android:layout_height="24dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_row="0"
        android:text="@string/action_about_us_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        android:typeface="sans" />
    
    <TextView
        android:id="@+id/aboutUsText"
        android:layout_height="133dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/left_margin"
        android:layout_row="1"
        android:text="@string/action_about_us_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="italic"
        android:typeface="sans" />

    <TextView
        android:id="@+id/aboutUsTextSign"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_less_margin"
        android:layout_row="4"
        android:text="@string/action_about_us_sign"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="normal"
        android:typeface="sans" />
    <TextView
        android:id="@+id/aboutUsFeatureTitle"
        android:layout_height="24dp"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/left_margin"
        android:layout_row="2"
        android:text="@string/action_about_us_feature_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/features"
        android:layout_height="225dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginRight="@dimen/left_margin"
        android:layout_row="3"
        android:text="@string/action_about_us_features"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/small_text_size"
        android:typeface="sans" />

</GridLayout>