<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_column="0"
    android:layout_gravity="left|top"
    android:layout_row="0"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".NewRegistrationPage" >

    <TextView
        android:id="@+id/welcomeNewUserSignUpLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/welcome_New_User_reg_Value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/standard_text_size"
        android:textStyle="bold"
        android:typeface="sans" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="@dimen/top_margin">

        <RadioButton
            android:id="@+id/invidual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/standard_text_size"
            android:text="@string/invidual" />

        <RadioButton
            android:id="@+id/health_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/standard_text_size"
            android:text="@string/health_centre" />
    </RadioGroup>
    <Button
            android:id="@+id/registerButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/top_margin"
            android:background="@drawable/button"
            android:onClick="proceedToRegister"
            android:text="@string/register_button_text_new"
            android:textColor="@color/button_text"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans"/>

</LinearLayout>