<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcomeNewUserSignUpLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/top_less_margin"
            android:text="@string/welcome_New_User_SignUp_Value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans" />

    </LinearLayout>
    <CheckBox
            android:id="@+id/codeCheckBox"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:ems="10"
            android:onClick="enterDocCheck"
            android:text="@string/enter_doc_check"
            android:textSize="@dimen/standard_text_size"
            android:typeface="sans" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/newUserNameValue"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/user_name_label"
            android:inputType="textPersonName"
            android:textSize="@dimen/standard_text_size"
            android:typeface="sans" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/newUserPhoneValue"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:ems="10"
            android:hint="@string/user_phone_label"
            android:inputType="phone"
            android:textSize="@dimen/standard_text_size"
            android:typeface="sans" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dateOfBirthText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/top_no_margin"
            android:ems="10"
            android:text="@string/date_of_birth"
            android:typeface="sans" />

        <TextView
            android:id="@+id/dateOfBirth"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_no_margin"
            android:ems="10"
            android:hint="@string/new_plan_date_hint"
            android:textSize="@dimen/standard_text_size"
            android:typeface="sans" 
            android:gravity="center"/>

        <Button
            android:id="@+id/setDateOfBirth"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginTop="@dimen/top_no_margin"
            android:background="@drawable/grid_bg"
            android:onClick="setDate"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="vertical" >
     <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/gender"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/genderDrp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_marginLeft="115dp"/>

</RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="vertical" >
     <TextView
        android:id="@+id/blood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:text="@string/blood"
        android:layout_marginTop="20dp" />  
    <Spinner
        android:id="@+id/bloodGrp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="115dp"/>

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="8"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/doctorPhoneText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/top_no_margin"
            android:ems="10"
            android:text="@string/doctor_number"
            android:typeface="sans" />

        <EditText
            android:id="@+id/doctorPhoneValue"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:ems="10"
            android:hint="@string/user_phone_label"
            android:inputType="phone"
            android:textSize="@dimen/small_text_size"
            android:typeface="sans" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="9"
        android:gravity="left"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/healthPhoneText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/top_no_margin"
            android:ems="10"
            android:text="@string/health_number"
            android:typeface="sans" />

        <EditText
            android:id="@+id/healthPhoneValue"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:ems="10"
            android:hint="@string/user_phone_label"
            android:inputType="phone"
            android:textSize="@dimen/small_text_size"
            android:typeface="sans" />
    </LinearLayout>

<Button
    android:id="@+id/registerButton"
    android:layout_width="200dp"
    android:layout_height="30dp"
    android:layout_column="0"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/top_no_margin"
    android:layout_row="10"
    android:background="@drawable/button"
    android:onClick="logNewUser"
    android:text="@string/register_button_text"
    android:textColor="@color/button_text"
    android:textSize="@dimen/standard_text_size"
    android:textStyle="bold"
    android:typeface="sans" />

</GridLayout>