<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/selectedGroupPicThumbnail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left|top"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/top_less_margin"
            android:contentDescription="@string/upload_group_pic_description"
            android:src="@drawable/ic_launcher"
            android:background="@drawable/image_border" />

        <TextView
            android:id="@+id/selectedGroupValue"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/top_less_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="1"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/viewMembersButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:background="@drawable/button"
            android:onClick="viewMembers"
            android:text="@string/view_group_members_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans"/>

        <Button
            android:id="@+id/createPlanButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:background="@drawable/create"
            android:onClick="createPlan"
            android:text="@string/create_plan_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans"/>
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="2"
        android:gravity="center"
        android:orientation="vertical" >

        
        <Button
            android:id="@+id/settleButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:background="@drawable/create"
            android:onClick="settle"
            android:text="@string/settle_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="3"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/groupPlanListLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/top_less_margin"
            android:text="@string/plans_list_label_text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="invisible"  />
        
        <Spinner
            android:id="@+id/viewGroupPlansListSpinner"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:prompt="@string/select_group_hint"
            android:visibility="invisible" 
            android:typeface="sans"
            android:textStyle="bold"
            android:textSize="@dimen/standard_text_size" />

        <Button
            android:id="@+id/viewSelectedPlanButton"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_less_margin"
            android:background="@drawable/button"
            android:onClick="goFromViewGroupsToViewPlans"
            android:text="@string/view_this_plan_button_text"
            android:textColor="@color/button_text"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:typeface="sans"
            android:visibility="invisible" />
    </LinearLayout>
    
   

</GridLayout>